feat: finalize submission package
